# arnics-os

./: .gitmodules  CMakeLists.txt  NOTICE  README.en.md  README.md  build-arnics-os.sh  main.c
Inc/: ProjDefine.h  include.h  typedef.h
arnics-os/Inc/: ProjDefine.h  include.h  projDefine.h  typedef.h
arnics-os/common/: TaskTimer.c  TaskTimer.cpp  TaskTimer.h  commonInclude.h  usrMalloc.h
arnics-os/core/: arnicsCore.c  arnicsCore.cpp  arnicsCore.h  arnicsCore.md  coreInclude.h
arnics-os/core/processTask/: processTask.c  processTask.h
arnics-os/core/separateSM/: separate_core.h
arnics-os/dataPlat/: dataPlat.en.md  dataPlat.md  dataPlatInclude.h  entry_dataPlat_api.cpp  entry_dataPlat_api.h  globalData.cpp  globalDataManager.cpp  globalDataManager.h  globalDef.h
arnics-os/dataPlat/dataApi/: dataApi.h
arnics-os/dataPlat/dataCore/: dataCore.c  dataCore.h  dataStruct.h
arnics-os/dataPlat/dataManager/: dataEvent.c  dataJson.c  dataJson.h  dataManagerList.c  dataStore.c  dataStore.h
arnics-os/dataPlat/dataObj/: dataObj.c  dataObj.h
arnics-os/dePartment/centerAdministrative/: ad_process.c  ad_process.h  centerAdministrative.h  entry_ad_api.c  entry_ad_api.h
arnics-os/dePartment/centerBusiness/: business_process.c  business_process.cpp  business_process.h  centerBusiness.en.md  centerBusiness.h  centerBusiness.md  entry_business_api.c  entry_business_api.h
arnics-os/dePartment/centerConsole/: console_process.c  console_process.cpp  console_process.h  entry_console_api.c  entry_console_api.h
arnics-os/dePartment/centerEvent/: centerEvent.en.md  centerEvent.h  centerEvent.md  entry_event_api.c  entry_event_api.h
arnics-os/dePartment/centerGuard/: centerGuard.en.md  centerGuard.md  entry_guard_api.c  entry_guard_api.h  guard_process.c  guard_process.cpp  guard_process.h
arnics-os/dePartment/centerMedia/: centerMedia.en.md  centerMedia.h  centerMedia.md  entry_media_api.c  entry_media_api.cpp  entry_media_api.h  media_process.c  media_process.cpp  media_process.h
arnics-os/document/: mdk-include.txt  mdk-path.txt
arnics-os/document/picture/: .$Design arnics-os.drawio.bkp  .$Design arnics-os.drawio.dtmp
arnics-os/drivers/: drivers.md  driversInclude.h
arnics-os/drivers/bsp/: bsp_def.h  drivers_var.c  drivers_var.h
arnics-os/drivers/common/: drivers_common.c  drivers_common.h  drivers_list.c  drivers_list.h
arnics-os/port/: arnicsMalloc.h  arnicsPort.h  arnicsStore.c  delay.h  port.en.md  port.md  portInclude.h  reprintf.c
arnics-os/port/portMcu/: arnicsMcu.c  arnicsMcu.h
arnics-os/routine/: arnicsTaskManager.c  arnicsTaskManager.cpp  arnicsTaskManager.h  routine.en.md  routine.md
arnics-os/rtosInterface/: entry_rtos_api.c  entry_rtos_api.cpp  entry_rtos_api.h  rtosInclude.h  rtosInterface.en.md  rtosInterface.h  rtosInterface.md  rtosInterfacePublic.h  rtosPort.cpp  rtosPort.h  rtosTask.c  rtosTask.cpp  rtosTask.h
arnics-os/rtosInterface/freertos/: FreeRTOSConfig.h  freertos.cpp  freertosPort.c
arnics-os/rtosInterface/linux/: linuxPort.c
arnics-os/rtosInterface/win/: winPort.c
arnics-os/thirdPartyPort/fal/: fal_cfg.h  fal_flash_sfud_port.c
common/: TaskTimer.c  TaskTimer.cpp  TaskTimer.h  commonInclude.h  delay.cpp  delay.h  reprintf.c  ril_ring.cpp  ril_ring.h  usrMalloc.cpp  usrMalloc.h
core/: arnicsCore.c  arnicsCore.cpp  arnicsCore.h  arnicsTaskManager.cpp  arnicsTaskManager.h  coreInclude.h
core/processTask/: processTask.h
core/ptThread/: pt.h
dataPlat/: dataPlat.en.md  dataPlat.md  dataPlatInclude.h  entry_dataPlat_api.cpp  entry_dataPlat_api.h  globalData.c  globalData.cpp  globalData.h  globalDataAction.c  globalDataAction.h  globalDataManager.c  globalDataManager.cpp  globalDataManager.h  globalDef.h
dataPlat/dataApi/: dataApi.h  dataPublic.h
dataPlat/dataCore/: dataCore.c  dataCore.h  dataStruct.h
dataPlat/dataManager/: dataEvent.h  dataJson.c  dataJson.h  dataManagerList.c  dataManagerList.h  dataStore.c  dataStore.h
dataPlat/dataObj/: dataClass.h  dataObj.c
dataPlat/dataObj/arnicsPara/: arnicsPara.c  arnicsPara.h  arnicsParaPublic.h
dataPlat/dataObj/systemCfg/: systemConfig.c  systemConfig.h  systemConfigPublic.h
dataPlat/dataObj/systemStatus/: systemStatus.c  systemStatus.h  systemStatusPublic.h
dePartment/CenterDataManager/: GlobalData.cpp  GlobalData.h  GlobalDataManager.cpp  GlobalDataManager.h  Global_def.h
dePartment/centerAdministrative/: ad_process.cpp  ad_process.h  centerAdministrative.h  entry_ad_api.cpp  entry_ad_api.h
dePartment/centerAdministrative/sleepStrategy/: sleep_wkcycle.cpp
dePartment/centerBusiness/: business_process.cpp  business_process.h  centerBusiness.h  entry_business_api.cpp  entry_business_api.h
dePartment/centerConsole/: console_process.cpp  console_process.h  entry_console_api.cpp  entry_console_api.h
dePartment/centerEvent/: centerEvent.h  centerEvent.md  entry_event_api.c  entry_event_api.cpp  entry_event_api.h
dePartment/centerEvent/eventProcess/: eventCore.c  eventCore.cpp  eventCore.h  eventList.c  eventList.cpp  eventList.h  eventMessage.cpp  (+1 more)
dePartment/centerGuard/: entry_guard_api.cpp  entry_guard_api.h  guard_process.cpp
dePartment/centerMedia/: centerMedia.h  entry_media_api.h  media_process.cpp  media_process.h
document/: attention.txt  mdk-path.txt
document/picture/: Design arnics-os.drawio  arnics.drawio
drivers/: drivers.en.md  drivers.md  driversInclude.h
drivers/bsp/: bsp_def.h  drivers_var.c  drivers_var.h
drivers/common/: drivers_common.c  drivers_common.h  drivers_list.c  drivers_list.h
port/: arnicsPort.cpp  arnicsPort.h  delay.c  delay.cpp  delay.h  mdk-path.txt  portInclude.h  reprintf.c
routine/: arnicsTaskManager.cpp  arnicsTaskManager.h  rtTask.cpp  rtTask.h
rtosInterface/: entry_rtos_api.c  entry_rtos_api.cpp  entry_rtos_api.h  rtosInclude.h  rtosInterface.h  rtosPort.c  rtosPort.cpp  rtosPort.h  rtosTask.c  rtosTask.cpp  rtosTask.h
rtosInterface/freertos/: FreeRTOSConfig.h  freertos.c  freertos.cpp  freertosDef.h
thirdPartyPort/fal/: fal_cfg.h  fal_flash_stm32l4.c
thirdPartyPort/sfud/: sfud_cfg.h  sfud_port.c
(+216 files in other folders)
